fixing sidebarView scroll bar overflow

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -41,7 +41,7 @@
 
       <div class="toolbar">
         <div id="toolbarContainer">
-          <div id="toolbarSidebar" class="hidden">
+          <div id="toolbarSidebar">
             <div class="splitToolbarButton toggled">
               <div class="toolbarButton viewThumbnail toggled" title="Show Thumbnails"></div>
               <div class="splitToolbarButtonSeparator"></div>
@@ -74,7 +74,7 @@
         </div>
       </div>
 
-      <div id="sidebarContainer" class="hidden">
+      <div id="sidebarContainer">
         <div id="thumbnailView">
         </div>
 
