page number works (not editable yet)

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -56,7 +56,7 @@
               <div class="splitToolbarButtonSeparator"></div>
               <div class="toolbarButton pageDown" title="Next Page" onclick="PDFView.page++"></div>
             </div>
-            <div id="pageNumber" class="toolbarField" contentEditable="true">1</div>
+            <div id="pageNumber" class="toolbarField" contentEditable="true"></div>
             <div id="numPages" class="toolbarLabel"></div>
             <div class="toolbarButtonFlexibleSpacer"></div>
             <div class="splitToolbarButton">
