--- a/web/viewer.html
+++ b/web/viewer.html
@@ -65,7 +65,21 @@
               <div class="splitToolbarButtonSeparator"></div>
               <div class="toolbarButton zoomIn" title="Zoom In" onclick="PDFView.zoomIn();"></div>
             </div>
-            <div class="dropdownToolbarButton">Auto</div>
+            <div class="dropdownToolbarButton">
+               <select id="scaleSelect" onchange="PDFView.parseScale(this.value);" oncontextmenu="return false;">
+                <option id="customScaleOption" value="custom"></option>
+                <option value="0.5">50%</option>
+                <option value="0.75">75%</option>
+                <option value="1">100%</option>
+                <option value="1.25">125%</option>
+                <option value="1.5">150%</option>
+                <option value="2">200%</option>
+                <option id="pageWidthOption" value="page-width">Page Width</option>
+                <option id="pageFitOption" value="page-fit">Page Fit</option>
+                <option id="pageAutoOption" value="auto" selected="selected">Auto</option>
+              </select>
+            </div>
+
             <div class="toolbarButtonFlexibleSpacer"></div>
             <div class="toolbarButton print" title="Print"></div>
             <div class="toolbarButton download"  title="Download"></div>
@@ -93,6 +107,25 @@
       </div>
 
     </div> <!-- outerContainer -->
+
+    <div id="errorWrapper" hidden='true'>
+      <div id="errorMessageLeft">
+        <span id="errorMessage"></span>
+        <button id="errorShowMore" onclick="" oncontextmenu="return false;">
+          More Information
+        </button>
+        <button id="errorShowLess" onclick="" oncontextmenu="return false;" hidden='true'>
+          Less Information
+        </button>
+      </div>
+      <div id="errorMessageRight">
+        <button id="errorClose" oncontextmenu="return false;">
+          Close
+        </button>
+      </div>
+      <div class="clearBoth"></div>
+      <textarea id="errorMoreInfo" hidden='true' readonly="readonly"></textarea>
+    </div>
 
 
 
@@ -131,7 +164,7 @@
  -->
       <div class="separator"></div>
 
-      <select id="scaleSelect" onchange="PDFView.parseScale(this.value);" oncontextmenu="return false;">
+<!--       <select id="scaleSelect" onchange="PDFView.parseScale(this.value);" oncontextmenu="return false;">
         <option id="customScaleOption" value="custom"></option>
         <option value="0.5">50%</option>
         <option value="0.75">75%</option>
@@ -143,7 +176,7 @@
         <option id="pageFitOption" value="page-fit">Page Fit</option>
         <option id="pageAutoOption" value="auto" selected="selected">Auto</option>
       </select>
-
+ -->
       <div class="separator"></div>
 
       <button id="print" onclick="window.print();" oncontextmenu="return false;">
@@ -167,7 +200,7 @@
       </a>
 
     </div>
-    <div id="errorWrapper" hidden='true'>
+<!--     <div id="errorWrapper" hidden='true'>
       <div id="errorMessageLeft">
         <span id="errorMessage"></span>
         <button id="errorShowMore" onclick="" oncontextmenu="return false;">
@@ -185,7 +218,7 @@
       <div class="clearBoth"></div>
       <textarea id="errorMoreInfo" hidden='true' readonly="readonly"></textarea>
     </div>
-
+ -->
 <!--     <div id="sidebar">
       <div id="sidebarBox">
         <div id="pinIcon" onClick="PDFView.pinSidebar()"></div>
