Add selection ring around thumbnails.

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -49,7 +49,7 @@
             </div>
           </div>
           <div id="toolbarViewer">
-            <div id="sidebarToggle" class="toolbarButton toggled" title="Toggle Sidebar"></div>
+            <div id="sidebarToggle" class="toolbarButton" title="Toggle Sidebar"></div>
             <div class="toolbarButtonSpacer"></div>
             <div class="splitToolbarButton">
               <div class="toolbarButton pageUp" title="Previous Page" onclick="PDFView.page--"></div>
