Fix broken metadata

--- a/test/unit/unit_test.html
+++ b/test/unit/unit_test.html
@@ -41,6 +41,7 @@
   <script type="text/javascript" src="crypto_spec.js"></script>
   <script type="text/javascript" src="stream_spec.js"></script>
   <script type="text/javascript" src="api_spec.js"></script>
+  <script type="text/javascript" src="metadata_spec.js"></script>
   <script type="text/javascript">
     'use strict';
 
