--- a/web/viewer.html
+++ b/web/viewer.html
@@ -58,8 +58,8 @@
             </div>
             <div class="toolbarLabel">Page: </div>
             <input type="number" id="pageNumber" class="toolbarField pageNumber" onchange="PDFView.page = this.value;" value="1" size="4" min="1">
-            </input>
-            <div id="numPages" class="toolbarLabel"></div>
+            </input> 
+            <div id="numPages" class="toolbarLabel" style="margin-left:5px;"></div>
             <div class="toolbarButtonFlexibleSpacer"></div>
             <div class="splitToolbarButton">
               <div class="toolbarButton zoomOut" title="Zoom Out" onclick="PDFView.zoomOut();"></div>
