Move sidebar open class.

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -39,7 +39,7 @@
   <body>
     <div id="outerContainer">
 
-      <div id="sidebarContainer" class="hidden">
+      <div id="sidebarContainer">
         <div id="toolbarSidebar">
           <div class="splitToolbarButton toggled">
             <button id="viewThumbnail" class="toolbarButton toggled" title="Show Thumbnails" onclick="PDFView.switchSidebarView('thumbs')"></button>
