--- a/web/viewer.html
+++ b/web/viewer.html
@@ -75,9 +75,9 @@
               <div id="toolbarViewerRight">
                 <input id="fileInput" class="toolbarButton fileInput" type="file" oncontextmenu="return false;" style="display: none"/>
 
-                <button id="print" class="toolbarButton print" title="Print" onclick="window.print()"></button>
+                <!-- <button id="print" class="toolbarButton print" title="Print" onclick="window.print()"></button> -->
                 <button id="download" class="toolbarButton download" title="Download" onclick="PDFView.download();"></button>
-                <div class="toolbarButtonSpacer"></div>
+                <!-- <div class="toolbarButtonSpacer"></div> -->
                 <a href="#" id="viewBookmark" class="toolbarButton bookmark" title="Bookmark (or copy) current location">
                 </a>
               </div>
