--- a/web/viewer-snippet.html
+++ b/web/viewer-snippet.html
@@ -1,4 +1,5 @@
 <!-- This snippet is used in production, see Makefile -->
+<script type="text/javascript" src="l10n.js"></script>
 <script type="text/javascript" src="../build/pdf.js"></script>
 <script type="text/javascript">
   // This specifies the location of the pdf.js file.
