Add back the browse button for the web viewer.

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -74,7 +74,7 @@
                 <span id="numPages" class="toolbarLabel"></span>
               </div>
               <div id="toolbarViewerRight">
-                <input id="fileInput" class="toolbarButton fileInput" type="file" oncontextmenu="return false;" style="display: none"/>
+                <input id="fileInput" class="fileInput" type="file" oncontextmenu="return false;"/>
 
                 <!-- <button id="print" class="toolbarButton print" title="Print" onclick="window.print()"></button> -->
                 <button id="download" class="toolbarButton download" title="Download" onclick="PDFView.download();"></button>
