--- a/web/viewer-snippet-firefox-extension.html
+++ b/web/viewer-snippet-firefox-extension.html
@@ -10,9 +10,8 @@
    script.text = localeData.text;
    document.getElementsByTagName('head')[0].appendChild(script);
 })();
-
-/* PDFJSSCRIPT_OTHER_SCRIPTS */
 </script>
+<script type="text/javascript" src="l10n.js"></script>
 <script type="text/javascript" id="PDFJS_SCRIPT_TAG">
 <!--
 // pdf.js is inlined here because resource:// urls won't work
